--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <!-- Basic Page Needs
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <meta charset="utf-8">
-<title>Stuart A. Burrell | Home</title>
-<meta name="description" content="Homepage of Stuart A. Burrell">
-<meta name="author" content="Stuart A. Burrell">
+<title>Manuel Tonneau | Home</title>
+<meta name="description" content="Homepage of Manuel Tonneau">
+<meta name="author" content="Manuel Tonneau">
 
 <!-- Mobile Specific Metas
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -69,7 +69,7 @@
    <section class="header">
       <div class="row">
       <div class="three columns">
-         <a href="/"><img title="The Dolomites! Photo by Heidi Dritschel" class="u-max-full-width" src='/assets/profile-pics/profile.png'></a>
+         <a href="/"><img title="" class="u-max-full-width" src='/assets/profile-pics/profile.jpg'></a>
       </div>
       <div class="nine columns main-description">
             <h1>Stuart Burrell</h1>
@@ -77,13 +77,13 @@
             <p>140 Science Park, Cambridge, UK</p>
             <p>firstname.lastname@featurespace.co.uk</p>
             <p>
-            <span onclick="window.open('https://scholar.google.co.uk/citations?user=DJ74QYQAAAAJ&hl=en')" style="cursor: pointer">
+            <span onclick="window.open('https://scholar.google.co.uk/citations?user=RIB-aogAAAAJ&hl=en')" style="cursor: pointer">
                <i class="ai ai-google-scholar" aria-hidden="true"></i>
             </span>
-            <span onclick="window.open('https://www.linkedin.com/in/stuart-burrell/')" style="cursor: pointer">
+            <span onclick="window.open('https://www.linkedin.com/in/manuel-tonneau/')" style="cursor: pointer">
                <i class="fa fa-linkedin-square" aria-hidden="true"></i>
             </span>
-            <span onclick="window.open('https://github.com/stuartburrell')" style="cursor: pointer">
+            <span onclick="window.open('https://github.com/manueltonneau')" style="cursor: pointer">
                <i class="fa fa-github" aria-hidden="true"></i>
             </span>
             <span onclick="window.open('/assets/cv/cv.pdf')" style="cursor: pointer">
