--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
    <section class="header">
       <div class="row">
       <div class="three columns">
-         <a href="/"><img title="" class="u-max-full-width" src='/assets/profile-pics/profile.jpg'></a>
+         <a href="/"><img title="" class="u-max-full-width" src='/assets/profile-pics/profile.png'></a>
       </div>
       <div class="nine columns main-description">
             <h1>Stuart Burrell</h1>
