--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
          <a href="/"><img title="" class="u-max-full-width" src='/assets/profile-pics/profile.png'></a>
       </div>
       <div class="nine columns main-description">
-            <h1>Stuart Burrell</h1>
-            <p><b>Research Scientist, Featurespace</b></p>
-            <p>140 Science Park, Cambridge, UK</p>
-            <p>firstname.lastname@featurespace.co.uk</p>
+            <h1>Manuel Tonneau</h1>
+            <p>PhD student in Social Data Science, Oxford Internet Institute, University of Oxford</p>
+<!--            <p>140 Science Park, Cambridge, UK</p>-->
+            <p>manuel.tonneau@oii.ox.ac.uk</p>
             <p>
             <span onclick="window.open('https://scholar.google.co.uk/citations?user=RIB-aogAAAAJ&hl=en')" style="cursor: pointer">
                <i class="ai ai-google-scholar" aria-hidden="true"></i>
