--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
       </div>
       <div class="nine columns main-description">
             <h1>Manuel Tonneau</h1>
-            <p>PhD student in Social Data Science, Oxford Internet Institute, University of Oxford</p>
-<!--            <p>140 Science Park, Cambridge, UK</p>-->
+            <p>Ph.D. student in Social Data Science, University of Oxford</p>
+            <p>Data Science Consultant, The World Bank</p>
+            <p>Member of the <a href='https://nyunetworks.github.io/people.html' target="_blank" rel="noopener noreferrer">Open Networks and Big Data Lab</a>, New York University</p>
+
             <p>manuel.tonneau@oii.ox.ac.uk</p>
             <p>
             <span onclick="window.open('https://scholar.google.co.uk/citations?user=RIB-aogAAAAJ&hl=en')" style="cursor: pointer">
