--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <h1>Manuel Tonneau</h1>
             <p>Ph.D. student in Social Data Science, University of Oxford</p>
             <p>Data Science Consultant, The World Bank</p>
-            <p>Member of the <a href='https://nyunetworks.github.io/people.html' target="_blank" rel="noopener noreferrer">Open Networks and Big Data Lab</a>, New York University</p>
+            <p>Member of the Open Networks and Big Data Lab, New York University</p>
 
             <p>manuel.tonneau@oii.ox.ac.uk</p>
             <p>
@@ -88,8 +88,8 @@
             <span onclick="window.open('https://github.com/manueltonneau')" style="cursor: pointer">
                <i class="fa fa-github" aria-hidden="true"></i>
             </span>
-            <span onclick="window.open('/assets/cv/cv.pdf')" style="cursor: pointer">
-               <i class="ai ai-cv-square" aria-hidden="true"></i>
+            <span onclick="window.open('https://twitter.com/ManuelTonneau')" style="cursor: pointer">
+               <i class="fa fa-twitter" aria-hidden="true"></i>
             </span>
             </p>
       </div>
