--- a/index.html
+++ b/index.html
@@ -79,8 +79,11 @@
 
             <p>manuel.tonneau@oii.ox.ac.uk</p>
             <p>
-            <span onclick="window.open('https://scholar.google.co.uk/citations?user=RIB-aogAAAAJ&hl=en')" style="cursor: pointer">
-               <i class="ai ai-google-scholar" aria-hidden="true"></i>
+                           <span onclick="window.open('https://twitter.com/ManuelTonneau')" style="cursor: pointer">
+               <i class="fa fa-twitter" aria-hidden="true"></i>
+            </span>
+                           <span onclick="window.open('https://piaille.fr/@manueltonneau')" style="cursor: pointer">
+               <i class="fa fa-mastodon" aria-hidden="true"></i>
             </span>
             <span onclick="window.open('https://www.linkedin.com/in/manuel-tonneau/')" style="cursor: pointer">
                <i class="fa fa-linkedin-square" aria-hidden="true"></i>
@@ -88,9 +91,13 @@
             <span onclick="window.open('https://github.com/manueltonneau')" style="cursor: pointer">
                <i class="fa fa-github" aria-hidden="true"></i>
             </span>
-            <span onclick="window.open('https://twitter.com/ManuelTonneau')" style="cursor: pointer">
-               <i class="fa fa-twitter" aria-hidden="true"></i>
+                           <span onclick="window.open('https://scholar.google.co.uk/citations?user=RIB-aogAAAAJ&hl=en')" style="cursor: pointer">
+               <i class="ai ai-google-scholar" aria-hidden="true"></i>
             </span>
+
+<!--            <span onclick="window.open('https://twitter.com/ManuelTonneau')" style="cursor: pointer">-->
+<!--               <i class="fa fa-twitter" aria-hidden="true"></i>-->
+<!--            </span>-->
             </p>
       </div>
       </div>
