--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                <i class="fa fa-twitter" aria-hidden="true"></i>
             </span>
                            <span onclick="window.open('https://piaille.fr/@manueltonneau')" style="cursor: pointer">
-               <i class="fa fa-mastodon" aria-hidden="true"></i>
+               <i class="fa-brands fa-mastodon" aria-hidden="true"></i>
             </span>
             <span onclick="window.open('https://www.linkedin.com/in/manuel-tonneau/')" style="cursor: pointer">
                <i class="fa fa-linkedin-square" aria-hidden="true"></i>
