--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
    <div class="docs-section">
       <h4>Bio</h4>
       <p>
-         I am a PhD student in Social Data Science at the <a href='https://www.oii.ox.ac.uk/' target="_blank" rel="noopener noreferrer">Oxford Internet Institute</a>, University of Oxford where I am advised by <a href='https://www.oii.ox.ac.uk/people/profiles/ralph-schroeder/' target="_blank" rel="noopener noreferrer">Ralph Schroeder</a> and <a href='http://www.scotthale.net/blog/' target="_blank" rel="noopener noreferrer">Scott Hale</a>.
+         I am a PhD student in Social Data Science at the <a href='https://www.oii.ox.ac.uk/' target="_blank" rel="noopener noreferrer">Oxford Internet Institute</a>, University of Oxford where I am supervised by <a href='https://www.oii.ox.ac.uk/people/profiles/ralph-schroeder/' target="_blank" rel="noopener noreferrer">Ralph Schroeder</a> and <a href='http://www.scotthale.net/blog/' target="_blank" rel="noopener noreferrer">Scott Hale</a>.
 <!--      I'm a Research Scientist at <a href='https://www.featurespace.com/' target="_blank" rel="noopener noreferrer">Featurespace</a>.-->
 <!--      Previously, I was a research fellow at the University of St Andrews in geometric measure theory, funded by an early career fellowship from the -->
 <!--      <a href='https://www.lms.ac.uk/' target="_blank" rel="noopener noreferrer">London Mathematical Society</a> and the -->
