--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
       <div class="nine columns main-description">
             <h1>Manuel Tonneau</h1>
             <p>Ph.D. student in Social Data Science, University of Oxford</p>
-            <p>Data Science Consultant, The World Bank</p>
             <p>Member of the Open Networks and Big Data Lab, New York University</p>
+            <p>Data Science Consultant, The World Bank</p>
 
             <p>manuel.tonneau@oii.ox.ac.uk</p>
             <p>
@@ -131,8 +131,9 @@
       <h4>Bio</h4>
       <p>
          I am a Ph.D. student in Social Data Science at the <a href='https://www.oii.ox.ac.uk/' target="_blank" rel="noopener noreferrer">Oxford Internet Institute</a> of the University of Oxford where I am supervised by <a href='https://www.oii.ox.ac.uk/people/profiles/ralph-schroeder/' target="_blank" rel="noopener noreferrer">Ralph Schroeder</a> and <a href='http://www.scotthale.net/blog/' target="_blank" rel="noopener noreferrer">Scott Hale</a>.
-<!--      I'm a Research Scientist at <a href='https://www.featurespace.com/' target="_blank" rel="noopener noreferrer">Featurespace</a>.-->
-<!--      Previously, I was a research fellow at the University of St Andrews in geometric measure theory, funded by an early career fellowship from the -->
+         I also consult for the World Bank under the supervision of <a href='http://www.samuelfraiberger.com/' target="_blank" rel="noopener noreferrer">Samuel Fraiberger</a> and am affiliated with the <a href='https://nyunetworks.github.io/' target="_blank" rel="noopener noreferrer">Open Networks and Big Data Lab</a> at New York University.
+         
+         <!--      Previously, I was a research fellow at the University of St Andrews in geometric measure theory, funded by an early career fellowship from the -->
 <!--      <a href='https://www.lms.ac.uk/' target="_blank" rel="noopener noreferrer">London Mathematical Society</a> and the -->
 <!--      <a href='https://heilbronn.ac.uk/' target="_blank" rel="noopener noreferrer">Heilbronn Institute for Mathematical Research</a>.-->
       </p>
