--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                <i class="fa fa-twitter" aria-hidden="true"></i>
             </span>
                            <span onclick="window.open('https://piaille.fr/@manueltonneau')" style="cursor: pointer">
-               <i class="fa-brands fa-mastodon" aria-hidden="true"></i>
+               <i class="fa fa-mastodon" aria-hidden="true"></i>
             </span>
             <span onclick="window.open('https://www.linkedin.com/in/manuel-tonneau/')" style="cursor: pointer">
                <i class="fa fa-linkedin-square" aria-hidden="true"></i>
@@ -132,7 +132,7 @@
       <p>
          I am a Ph.D. student in Social Data Science at the <a href='https://www.oii.ox.ac.uk/' target="_blank" rel="noopener noreferrer">Oxford Internet Institute</a> of the University of Oxford where I am supervised by <a href='https://www.oii.ox.ac.uk/people/profiles/ralph-schroeder/' target="_blank" rel="noopener noreferrer">Ralph Schroeder</a> and <a href='http://www.scotthale.net/blog/' target="_blank" rel="noopener noreferrer">Scott Hale</a>.
          I also consult for the World Bank under the supervision of <a href='http://www.samuelfraiberger.com/' target="_blank" rel="noopener noreferrer">Samuel Fraiberger</a> and am affiliated with the <a href='https://nyunetworks.github.io/' target="_blank" rel="noopener noreferrer">Open Networks and Big Data Lab</a> at New York University.
-         
+
          <!--      Previously, I was a research fellow at the University of St Andrews in geometric measure theory, funded by an early career fellowship from the -->
 <!--      <a href='https://www.lms.ac.uk/' target="_blank" rel="noopener noreferrer">London Mathematical Society</a> and the -->
 <!--      <a href='https://heilbronn.ac.uk/' target="_blank" rel="noopener noreferrer">Heilbronn Institute for Mathematical Research</a>.-->
