--- a/index.html
+++ b/index.html
@@ -203,89 +203,92 @@
    <span class="anchor" id="publications"></span>
    <div class="docs-section">
 
-      <h4>Publications</h4>
+      <h4>Research</h4>
       <ul class="tab-nav">
-         <li><div class="button active" data-ref="#papers-selected">Selected</div></li>
+<!--         <li><div class="button active" data-ref="#papers-selected">Selected</div></li>-->
          <li><div class="button" data-ref="#papers-all">All</div></li>
+<!--         <li><div class="button published" data-ref="#papers-published">Published</div></li>-->
+<!--         <li><div class="button working" data-ref="#papers-selected">Working papers</div></li>-->
+
       </ul>
 
       <div class="tab-content">
-         <div class="tab-pane active" id="papers-selected">
+         <div class="tab-pane active" id="papers-all">
             <span class="anchor" id="JKOICNN"></span>
 
             <!--paper 1-->
             <div class="paper">
-               <p class="title"><b>The fractal structure of elliptical polynomial spirals</b></p>
-               <p>S. A. Burrell, K. J. Falconer and J. M. Fraser</p>
-               <p><i>Monatsh. Math., Vol. 199, pp. 1–22, 2022.</i></p>
+               <p class="title"><b>Large-Scale Demographic Inference of Social Media Users in a Low-Resource Scenario</b></p>
+               <p>Karim Lasri, Manuel Tonneau, Haaya Naushan, Niyati Malhotra, Ibrahim Farouq, Victor Orozco, Samuel Fraiberger</p>
+               <p><i>ICWSM'23: International AAAI Conference on Web and Social Media.</i></p>
                <div class="paper-buttons">
-                  <a class="button" href="https://arxiv.org/abs/2008.08539" target="_blank">arXiv</a>
+                  <a class="button" href="https://ojs.aaai.org/index.php/ICWSM/article/view/22165" target="_blank">Paper</a>
                </div>
             </div>
 
             <!--paper 2-->
             <div class="paper">
-               <p class="title"><b>Dimensions of fractional Brownian images</b></p>
-               <p>S. A. Burrell</p>
-               <p><i>Journal of Theoretical Probability, Vol. 35, pp. 2217-2238, 2022.</i></p>
+               <p class="title"><b>Multilingual Detection of Personal Employment Status on Twitter</b></p>
+               <p>Manuel Tonneau, Dhaval Adjodah, Joao Palotti, Nir Grinberg, Samuel Fraiberger</p>
+               <p><i>ACL'22: Annual Meeting of the Association for Computational Linguistics</i></p>
                <div class="paper-buttons">
                   <a class="button" href="https://arxiv.org/abs/2002.03659" target="_blank">arXiv</a>
                </div>
             </div>
 
-            <!--paper 3-->
-            <div class="paper">
-               <p class="title"><b>Projection theorems for intermediate dimensions</b></p>
-               <p>S. A. Burrell, K. J. Falconer and J. M. Fraser</p>
-               <p><i>Journal of Fractal Geometry, Vol. 8, No. 2, pp. 95-116, 2021.</i></p>
-               <div class="paper-buttons">
-                  <a class="button" href="https://arxiv.org/abs/1907.07632" target="_blank">arXiv</a>
-                  <a class="button" href="/assets/posters/poster2.pdf" target="_blank">poster</a>
-               </div>
-            </div>
+<!--            &lt;!&ndash;paper 3&ndash;&gt;-->
+<!--            <div class="paper">-->
+<!--               <p class="title"><b>Projection theorems for intermediate dimensions</b></p>-->
+<!--               <p>S. A. Burrell, K. J. Falconer and J. M. Fraser</p>-->
+<!--               <p><i>Journal of Fractal Geometry, Vol. 8, No. 2, pp. 95-116, 2021.</i></p>-->
+<!--               <div class="paper-buttons">-->
+<!--                  <a class="button" href="https://arxiv.org/abs/1907.07632" target="_blank">arXiv</a>-->
+<!--                  <a class="button" href="/assets/posters/poster2.pdf" target="_blank">poster</a>-->
+<!--               </div>-->
+<!--            </div>-->
 
-            <!--paper 4-->
-            <div class="paper">
-               <p class="title"><b>Digit expansions of numbers in different bases</b></p>
-               <p>S. A. Burrell, H. Yu</p>
-               <p><i>Journal of Number Theory, Vol. 226, pp. 284-306, 2021.</i></p>
-               <div class="paper-buttons">
-                  <a class="button" href="https://arxiv.org/abs/1905.00832" target="_blank">arXiv</a>
-               </div>
-            </div>
+<!--            &lt;!&ndash;paper 4&ndash;&gt;-->
+<!--            <div class="paper">-->
+<!--               <p class="title"><b>Digit expansions of numbers in different bases</b></p>-->
+<!--               <p>S. A. Burrell, H. Yu</p>-->
+<!--               <p><i>Journal of Number Theory, Vol. 226, pp. 284-306, 2021.</i></p>-->
+<!--               <div class="paper-buttons">-->
+<!--                  <a class="button" href="https://arxiv.org/abs/1905.00832" target="_blank">arXiv</a>-->
+<!--               </div>-->
+<!--            </div>-->
 
-         <div class="tab-pane" id="papers-all">
+<!--         <div class="tab-pane" id="papers-all">-->
 
-            <!--paper 3-->
-            <div class="paper">
-               <p class="title"><b>Coincidence and disparity of fractal dimensions</b></p>
-               <p>S. A. Burrell</p>
-               <p><i>PhD Thesis, University of St Andrews, 2021</i></p>
-               <div class="paper-buttons">
-                  <a class="button" href="https://research-repository.st-andrews.ac.uk/handle/10023/23381" target="_blank">link</a>
-               </div>
-            </div>
+<!--            &lt;!&ndash;paper 3&ndash;&gt;-->
+<!--            <div class="paper">-->
+<!--               <p class="title"><b>Coincidence and disparity of fractal dimensions</b></p>-->
+<!--               <p>S. A. Burrell</p>-->
+<!--               <p><i>PhD Thesis, University of St Andrews, 2021</i></p>-->
+<!--               <div class="paper-buttons">-->
+<!--                  <a class="button" href="https://research-repository.st-andrews.ac.uk/handle/10023/23381" target="_blank">link</a>-->
+<!--               </div>-->
+<!--            </div>-->
 
-            <!--paper 5-->
-            <div class="paper">
-               <p class="title"><b>The dimension of inhomogeneous self-affine sets</b></p>
-               <p>S. A. Burrell, J. M. Fraser</p>
-               <p><i>Annal. Acad. Sci. Fenn. Math., Vol. 45, pp. 313-324, 2020. </i></p>
-               <div class="paper-buttons">
-                  <a class="button" href="https://arxiv.org/abs/1807.08694" target="_blank">arXiv</a>
-                  <a class="button" href="/assets/posters/poster.pdf" target="_blank">poster</a>
-               </div>
-            </div>
+<!--            &lt;!&ndash;paper 5&ndash;&gt;-->
+<!--            <div class="paper">-->
+<!--               <p class="title"><b>The dimension of inhomogeneous self-affine sets</b></p>-->
+<!--               <p>S. A. Burrell, J. M. Fraser</p>-->
+<!--               <p><i>Annal. Acad. Sci. Fenn. Math., Vol. 45, pp. 313-324, 2020. </i></p>-->
+<!--               <div class="paper-buttons">-->
+<!--                  <a class="button" href="https://arxiv.org/abs/1807.08694" target="_blank">arXiv</a>-->
+<!--                  <a class="button" href="/assets/posters/poster.pdf" target="_blank">poster</a>-->
+<!--               </div>-->
+<!--            </div>-->
 
-            <!--paper 6-->
-            <div class="paper">
-               <p class="title"><b>On the dimension and measure of inhomogeneous attractors</b></p>
-               <p>S. A. Burrell</p>
-               <p><i>Real Analysis Exchange, Vol. 44, No. 1, pp. 199-216, 2019.</i></p>
-               <div class="paper-buttons">
-                  <a class="button" href="https://arxiv.org/abs/1805.00887" target="_blank">arXiv</a>
-               </div>
-            </div>
+<!--            &lt;!&ndash;paper 6&ndash;&gt;-->
+<!--            <div class="paper">-->
+<!--               <p class="title"><b>On the dimension and measure of inhomogeneous attractors</b></p>-->
+<!--               <p>S. A. Burrell</p>-->
+<!--               <p><i>Real Analysis Exchange, Vol. 44, No. 1, pp. 199-216, 2019.</i></p>-->
+<!--               <div class="paper-buttons">-->
+<!--                  <a class="button" href="https://arxiv.org/abs/1805.00887" target="_blank">arXiv</a>-->
+<!--               </div>-->
+<!--            </div>-->
          </div>
       </div>
    </div>
