update paper link

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                <p>Manuel Tonneau, Dhaval Adjodah, Joao Palotti, Nir Grinberg, Samuel Fraiberger</p>
                <p><i>ACL'22: Annual Meeting of the Association for Computational Linguistics</i></p>
                <div class="paper-buttons">
-                  <a class="button" href="https://arxiv.org/abs/2002.03659" target="_blank">arXiv</a>
+                  <a class="button" href="https://aclanthology.org/2022.acl-long.453/" target="_blank">Paper</a>
                </div>
             </div>
 
