--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <!--paper 1-->
             <div class="paper">
                <p class="title"><b>Large-Scale Demographic Inference of Social Media Users in a Low-Resource Scenario</b></p>
-               <p>Karim Lasri, Manuel Tonneau, Haaya Naushan, Niyati Malhotra, Ibrahim Farouq, Victor Orozco, Samuel Fraiberger</p>
+               <p>Karim Lasri<sub>‡</sub>, <b>Manuel Tonneau</b><sub>‡</sub>, Haaya Naushan, Niyati Malhotra, Ibrahim Farouq, Victor Orozco, Samuel Fraiberger</p>
                <p><i>ICWSM'23: International AAAI Conference on Web and Social Media.</i></p>
                <div class="paper-buttons">
                   <a class="button" href="https://ojs.aaai.org/index.php/ICWSM/article/view/22165" target="_blank">Paper</a>
@@ -229,7 +229,7 @@
             <!--paper 2-->
             <div class="paper">
                <p class="title"><b>Multilingual Detection of Personal Employment Status on Twitter</b></p>
-               <p>Manuel Tonneau, Dhaval Adjodah, Joao Palotti, Nir Grinberg, Samuel Fraiberger</p>
+               <p><b>Manuel Tonneau</b>, Dhaval Adjodah, Joao Palotti, Nir Grinberg, Samuel Fraiberger</p>
                <p><i>ACL'22: Annual Meeting of the Association for Computational Linguistics</i></p>
                <div class="paper-buttons">
                   <a class="button" href="https://aclanthology.org/2022.acl-long.453/" target="_blank">Paper</a>
