--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <!--paper 1-->
             <div class="paper">
                <p class="title"><b>Large-Scale Demographic Inference of Social Media Users in a Low-Resource Scenario</b></p>
-               <p>Karim Lasri<sup>‡</sup>, <b>Manuel Tonneau</b><sup>‡</sup>, Haaya Naushan, Niyati Malhotra, Ibrahim Farouq, Victor Orozco, Samuel Fraiberger</p>
+               <p>Karim Lasri<sup>‡</sup>, <b>Manuel Tonneau<sup>‡</sup></b>, Haaya Naushan, Niyati Malhotra, Ibrahim Farouq, Victor Orozco, Samuel Fraiberger</p>
                <p><i>ICWSM'23: International AAAI Conference on Web and Social Media.</i></p>
                <div class="paper-buttons">
                   <a class="button" href="https://ojs.aaai.org/index.php/ICWSM/article/view/22165" target="_blank">Paper</a>
