--- a/index.html
+++ b/index.html
@@ -204,6 +204,10 @@
    <div class="docs-section">
 
       <h4>Research</h4>
+
+         <p>Most recent publications on <a href="https://scholar.google.com/citations?user=RIB-aogAAAAJ&hl=en" target="_blank">Google Scholar</a>.<br/>
+          <sup>‡</sup> indicates equal contribution.
+          </p>
       <ul class="tab-nav">
 <!--         <li><div class="button active" data-ref="#papers-selected">Selected</div></li>-->
          <li><div class="button" data-ref="#papers-all">All</div></li>
