--- a/index.html
+++ b/index.html
@@ -297,6 +297,56 @@
       </div>
    </div>
 
+    <div  class="col-md-12" style="margin-bottom: 20px; text-align: center">
+
+<!--        <h2 style="padding: 0px; margin: 0px;">🗞️ news </h2>-->
+    <h2 style="margin: 0px 0px -5px 0px;">news</h2>
+
+    <div class="newsbox" style="height:170px;overflow:auto;border-radius: 10px; margin-left: 25px; margin-right: 25px; margin-bottom: 5px;;
+    display: inline-block; text-align: left;">
+    <table style="width: 100%">
+
+
+
+
+      <tr>
+        <td style="width: 10%; min-width: 75px;" class="datev">2023-02-07</td>
+          <td style="width: 90%">
+              🎬 Presented our paper on content removals at WWW!
+
+              <a href="https://twitter.com/frapi9/status/1653450568809971730">(link)</a>
+
+
+
+          </td>
+      </tr>
+
+
+      <tr>
+        <td style="width: 10%; min-width: 75px;" class="datev">2023-03-15</td>
+          <td style="width: 90%">
+              📜 Three papers accepted at ICWSM 2023: "The Amplification Paradox in Recommender Systems", "Quotatives Indicate Decline in Objectivity in US Political News", and "Spillover of Antisocial Behavior from Fringe Platforms: The Unintended Consequences of Community Banning"
+
+
+
+                              <a href="https://arxiv.org/abs/2209.09803">(link)</a>
+
+
+                              <a href="https://arxiv.org/abs/2210.15476">(link)</a>
+
+
+                              <a href="https://arxiv.org/abs/2302.11225">(link)</a>
+
+
+
+
+          </td>
+      </tr>
+<!--        </ul>-->
+        </div>
+        </div>
+<!--        </div>-->
+<!--        </div>-->
 <!--   &lt;!&ndash; ========== Talks ========== &ndash;&gt;-->
 <!--   <span class="anchor" id="talks"></span>-->
 <!--   <div class="docs-section">-->
