delimit news box

--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
    </div>
 
 <!--    <!======= NEWS ====== &ndash;&gt;-->
-        <div  class="col-md-12" style="margin-bottom: 20px; text-align: center">
+<!--        <div  class="col-md-12" style="margin-bottom: 20px; text-align: center">-->
 
 <!--        <h2 style="padding: 0px; margin: 0px;">🗞️ news </h2>-->
-    <h2 style="margin: 0px 0px -5px 0px;">news</h2>
+      <h4>News</h4>
 
     <div class="newsbox" style="height:170px;overflow:auto;border-radius: 10px; margin-left: 25px; margin-right: 25px; margin-bottom: 5px;;
     display: inline-block; text-align: left;">
@@ -247,7 +247,7 @@
       </tr>
 <!--        </ul>-->
         </div>
-        </div>
+<!--        </div>-->
    <!-- ========== PUBLICATIONS ========== -->
    <span class="anchor" id="publications"></span>
    <div class="docs-section">
