comment out research

--- a/index.html
+++ b/index.html
@@ -249,102 +249,49 @@
         </div>
 <!--        </div>-->
    <!-- ========== PUBLICATIONS ========== -->
-   <span class="anchor" id="publications"></span>
-   <div class="docs-section">
+<!--   <span class="anchor" id="publications"></span>-->
+<!--   <div class="docs-section">-->
 
-      <h4>Research</h4>
+<!--      <h4>Research</h4>-->
 
-         <p>Most recent publications on <a href="https://scholar.google.com/citations?user=RIB-aogAAAAJ&hl=en" target="_blank">Google Scholar</a>.<br/>
-          <sup>‡</sup> indicates equal contribution.
-          </p>
-      <ul class="tab-nav">
-<!--         <li><div class="button active" data-ref="#papers-selected">Selected</div></li>-->
-         <li><div class="button" data-ref="#papers-all">All</div></li>
-<!--         <li><div class="button published" data-ref="#papers-published">Published</div></li>-->
-<!--         <li><div class="button working" data-ref="#papers-selected">Working papers</div></li>-->
+<!--         <p>Most recent publications on <a href="https://scholar.google.com/citations?user=RIB-aogAAAAJ&hl=en" target="_blank">Google Scholar</a>.<br/>-->
+<!--          <sup>‡</sup> indicates equal contribution.-->
+<!--          </p>-->
+<!--      <ul class="tab-nav">-->
+<!--&lt;!&ndash;         <li><div class="button active" data-ref="#papers-selected">Selected</div></li>&ndash;&gt;-->
+<!--         <li><div class="button" data-ref="#papers-all">All</div></li>-->
+<!--&lt;!&ndash;         <li><div class="button published" data-ref="#papers-published">Published</div></li>&ndash;&gt;-->
+<!--&lt;!&ndash;         <li><div class="button working" data-ref="#papers-selected">Working papers</div></li>&ndash;&gt;-->
 
-      </ul>
+<!--      </ul>-->
 
-      <div class="tab-content">
-         <div class="tab-pane active" id="papers-all">
-            <span class="anchor" id="JKOICNN"></span>
+<!--      <div class="tab-content">-->
+<!--         <div class="tab-pane active" id="papers-all">-->
+<!--            <span class="anchor" id="JKOICNN"></span>-->
 
-            <!--paper 1-->
-            <div class="paper">
-               <p class="title"><b>Large-Scale Demographic Inference of Social Media Users in a Low-Resource Scenario</b></p>
-               <p>Karim Lasri<sup>‡</sup>, <b>Manuel Tonneau<sup>‡</sup></b>, Haaya Naushan, Niyati Malhotra, Ibrahim Farouq, Victor Orozco, Samuel Fraiberger</p>
-               <p><i>ICWSM'23: International AAAI Conference on Web and Social Media.</i></p>
-               <div class="paper-buttons">
-                  <a class="button" href="https://ojs.aaai.org/index.php/ICWSM/article/view/22165" target="_blank">Paper</a>
-               </div>
-            </div>
-
-            <!--paper 2-->
-            <div class="paper">
-               <p class="title"><b>Multilingual Detection of Personal Employment Status on Twitter</b></p>
-               <p><b>Manuel Tonneau</b>, Dhaval Adjodah, Joao Palotti, Nir Grinberg, Samuel Fraiberger</p>
-               <p><i>ACL'22: Annual Meeting of the Association for Computational Linguistics</i></p>
-               <div class="paper-buttons">
-                  <a class="button" href="https://aclanthology.org/2022.acl-long.453/" target="_blank">Paper</a>
-               </div>
-            </div>
-
-<!--            &lt;!&ndash;paper 3&ndash;&gt;-->
+<!--            &lt;!&ndash;paper 1&ndash;&gt;-->
 <!--            <div class="paper">-->
-<!--               <p class="title"><b>Projection theorems for intermediate dimensions</b></p>-->
-<!--               <p>S. A. Burrell, K. J. Falconer and J. M. Fraser</p>-->
-<!--               <p><i>Journal of Fractal Geometry, Vol. 8, No. 2, pp. 95-116, 2021.</i></p>-->
+<!--               <p class="title"><b>Large-Scale Demographic Inference of Social Media Users in a Low-Resource Scenario</b></p>-->
+<!--               <p>Karim Lasri<sup>‡</sup>, <b>Manuel Tonneau<sup>‡</sup></b>, Haaya Naushan, Niyati Malhotra, Ibrahim Farouq, Victor Orozco, Samuel Fraiberger</p>-->
+<!--               <p><i>ICWSM'23: International AAAI Conference on Web and Social Media.</i></p>-->
 <!--               <div class="paper-buttons">-->
-<!--                  <a class="button" href="https://arxiv.org/abs/1907.07632" target="_blank">arXiv</a>-->
-<!--                  <a class="button" href="/assets/posters/poster2.pdf" target="_blank">poster</a>-->
+<!--                  <a class="button" href="https://ojs.aaai.org/index.php/ICWSM/article/view/22165" target="_blank">Paper</a>-->
 <!--               </div>-->
 <!--            </div>-->
 
-<!--            &lt;!&ndash;paper 4&ndash;&gt;-->
+<!--            &lt;!&ndash;paper 2&ndash;&gt;-->
 <!--            <div class="paper">-->
-<!--               <p class="title"><b>Digit expansions of numbers in different bases</b></p>-->
-<!--               <p>S. A. Burrell, H. Yu</p>-->
-<!--               <p><i>Journal of Number Theory, Vol. 226, pp. 284-306, 2021.</i></p>-->
+<!--               <p class="title"><b>Multilingual Detection of Personal Employment Status on Twitter</b></p>-->
+<!--               <p><b>Manuel Tonneau</b>, Dhaval Adjodah, Joao Palotti, Nir Grinberg, Samuel Fraiberger</p>-->
+<!--               <p><i>ACL'22: Annual Meeting of the Association for Computational Linguistics</i></p>-->
 <!--               <div class="paper-buttons">-->
-<!--                  <a class="button" href="https://arxiv.org/abs/1905.00832" target="_blank">arXiv</a>-->
+<!--                  <a class="button" href="https://aclanthology.org/2022.acl-long.453/" target="_blank">Paper</a>-->
 <!--               </div>-->
 <!--            </div>-->
 
-<!--         <div class="tab-pane" id="papers-all">-->
-
-<!--            &lt;!&ndash;paper 3&ndash;&gt;-->
-<!--            <div class="paper">-->
-<!--               <p class="title"><b>Coincidence and disparity of fractal dimensions</b></p>-->
-<!--               <p>S. A. Burrell</p>-->
-<!--               <p><i>PhD Thesis, University of St Andrews, 2021</i></p>-->
-<!--               <div class="paper-buttons">-->
-<!--                  <a class="button" href="https://research-repository.st-andrews.ac.uk/handle/10023/23381" target="_blank">link</a>-->
-<!--               </div>-->
-<!--            </div>-->
-
-<!--            &lt;!&ndash;paper 5&ndash;&gt;-->
-<!--            <div class="paper">-->
-<!--               <p class="title"><b>The dimension of inhomogeneous self-affine sets</b></p>-->
-<!--               <p>S. A. Burrell, J. M. Fraser</p>-->
-<!--               <p><i>Annal. Acad. Sci. Fenn. Math., Vol. 45, pp. 313-324, 2020. </i></p>-->
-<!--               <div class="paper-buttons">-->
-<!--                  <a class="button" href="https://arxiv.org/abs/1807.08694" target="_blank">arXiv</a>-->
-<!--                  <a class="button" href="/assets/posters/poster.pdf" target="_blank">poster</a>-->
-<!--               </div>-->
-<!--            </div>-->
-
-<!--            &lt;!&ndash;paper 6&ndash;&gt;-->
-<!--            <div class="paper">-->
-<!--               <p class="title"><b>On the dimension and measure of inhomogeneous attractors</b></p>-->
-<!--               <p>S. A. Burrell</p>-->
-<!--               <p><i>Real Analysis Exchange, Vol. 44, No. 1, pp. 199-216, 2019.</i></p>-->
-<!--               <div class="paper-buttons">-->
-<!--                  <a class="button" href="https://arxiv.org/abs/1805.00887" target="_blank">arXiv</a>-->
-<!--               </div>-->
-<!--            </div>-->
-         </div>
-      </div>
-   </div>
+<!--         </div>-->
+<!--      </div>-->
+<!--   </div>-->
 
 
 <!--        </div>-->
