add scroll top option

--- a/index.html
+++ b/index.html
@@ -245,8 +245,15 @@
 
           </td>
       </tr>
+            </table>
 <!--        </ul>-->
         </div>
+    <script>
+    window.onload = function() {
+        var newsbox = document.getElementById("newsbox");
+        newsbox.scrollTop = 0; // Scrolls the newsbox to the top
+    };
+</script>
 <!--        </div>-->
    <!-- ========== PUBLICATIONS ========== -->
 <!--   <span class="anchor" id="publications"></span>-->
@@ -520,17 +527,17 @@
 <!--   </p>-->
 <!--   </div>-->
 
-<!--   <div class="footer">-->
-<!--   <div class="row">-->
-<!--      <div class="nine columns">-->
-<!--      This website is thanks to an awesome template by <a href="http://web.media.mit.edu/~msaveski/">Martin Saveski.</a>-->
-<!--      </div>-->
-<!--      <div class="six columns">  &nbsp;&nbsp; </div>-->
-<!--      &lt;!&ndash; <div class="four columns">-->
-<!--         firstsurname.secondsurname@microsoft.com-->
-<!--      </div> &ndash;&gt;-->
-<!--   </div>-->
-<!--   </div>-->
+   <div class="footer">
+   <div class="row">
+      <div class="nine columns">
+      This website is based on awesome templates by <a href="https://web.stanford.edu/~msaveski/">Martin Saveski and <a href="https://manoelhortaribeiro.github.io/">Manoel Horta Ribeiro.</a>
+      </div>
+      <div class="six columns">  &nbsp;&nbsp; </div>
+      <!-- <div class="four columns">
+         firstsurname.secondsurname@microsoft.com
+      </div> -->
+   </div>
+   </div>
 
 </div>
 <!-- End Document
