update links to template makers

--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
    <div class="footer">
    <div class="row">
       <div class="nine columns">
-      This website is based on awesome templates by <a href="https://web.stanford.edu/~msaveski/">Martin Saveski and <a href="https://manoelhortaribeiro.github.io/">Manoel Horta Ribeiro.</a>
+      This website is based on templates developed by <a href='https://web.stanford.edu/~msaveski/' target="_blank" rel="noopener noreferrer">Martin Saveski</a> and <a href='https://manoelhortaribeiro.github.io/' target="_blank" rel="noopener noreferrer">Manoel Horta Ribeiro</a>.
       </div>
       <div class="six columns">  &nbsp;&nbsp; </div>
       <!-- <div class="four columns">
