update first news

--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@
       <tr>
         <td style="width: 10%; min-width: 75px;" class="datev">2023-02-07</td>
           <td style="width: 90%">
-              🎬 Presented our paper on content removals at WWW!
+              🎬 Presented ongoing work on hate speech on Nigerian Twitter at IC2S2!
 
-              <a href="https://twitter.com/frapi9/status/1653450568809971730">(link)</a>
+              <a href="/assets/images/ic2s2_2023.jpg">(photo)</a>
 
 
 
