--- a/index.html
+++ b/index.html
@@ -228,20 +228,8 @@
       <tr>
         <td style="width: 10%; min-width: 75px;" class="datev">2023-03-15</td>
           <td style="width: 90%">
-              📜 Three papers accepted at ICWSM 2023: "The Amplification Paradox in Recommender Systems", "Quotatives Indicate Decline in Objectivity in US Political News", and "Spillover of Antisocial Behavior from Fringe Platforms: The Unintended Consequences of Community Banning"
-
-
-
-                              <a href="https://arxiv.org/abs/2209.09803">(link)</a>
-
-
-                              <a href="https://arxiv.org/abs/2210.15476">(link)</a>
-
-
-                              <a href="https://arxiv.org/abs/2302.11225">(link)</a>
-
-
-
+              📜 Paper accepted at ICWSM 2023: ""
+                              <a href="https://ojs.aaai.org/index.php/ICWSM/article/view/22165">(link)</a>
 
           </td>
       </tr>
