--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       <tr>
         <td style="width: 10%; min-width: 75px;" class="datev">2023-03-15</td>
           <td style="width: 90%">
-              📜 Paper accepted at ICWSM 2023: ""
+              📜 Paper accepted at ICWSM 2023: "Large-Scale Demographic Inference of Social Media Users in a Low-Resource Scenario"
                               <a href="https://ojs.aaai.org/index.php/ICWSM/article/view/22165">(link)</a>
 
           </td>
