--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
       <div class="container">
          <ul class="navbar-list">
             <li class="navbar-item"><a class="navbar-link" href=/index.html#bio>Bio</a></li>
-            <li class="navbar-item"><a class="navbar-link" href=/index.html#publications>Research</a></li>
+             <li class="navbar-item"><a class="navbar-link" href=/index.html#news>News</a></li>
+            <li class="navbar-item"><a class="navbar-link" href=/research.html>Research</a></li>
 <!--            <li class="navbar-item"><a class="navbar-link" href=/index.html#talks>Talks</a></li>-->
 <!--            <li class="navbar-item"><a class="navbar-link" href=/index.html#teaching>Teaching</a></li>-->
             <!--<li class="navbar-item"><a class="navbar-link" href=/assets/cv/cv.pdf>CV</a></li>-->
@@ -203,6 +204,8 @@
 <!--        <div  class="col-md-12" style="margin-bottom: 20px; text-align: center">-->
 
 <!--        <h2 style="padding: 0px; margin: 0px;">🗞️ news </h2>-->
+       <span class="anchor" id="news"></span>
+   <div class="docs-section">
       <h4>News</h4>
 
     <div class="newsbox" style="height:170px;overflow:auto;border-radius: 10px; margin-left: 25px; margin-right: 25px; margin-bottom: 5px;;
@@ -236,57 +239,14 @@
             </table>
 <!--        </ul>-->
         </div>
+       </div>
     <script>
     window.onload = function() {
         var newsbox = document.getElementById("newsbox");
         newsbox.scrollTop = 0; // Scrolls the newsbox to the top
     };
 </script>
-<!--        </div>-->
-    ========== PUBLICATIONS ==========
-   <span class="anchor" id="publications"></span>
-   <div class="docs-section">
 
-      <h4>Research</h4>
-
-         <p>Most recent publications on <a href="https://scholar.google.com/citations?user=RIB-aogAAAAJ&hl=en" target="_blank">Google Scholar</a>.<br/>
-          <sup>‡</sup> indicates equal contribution.
-          </p>
-      <ul class="tab-nav">
-<!--         <li><div class="button active" data-ref="#papers-selected">Selected</div></li>-->
-         <li><div class="button" data-ref="#papers-all">All</div></li>
-<!--         <li><div class="button published" data-ref="#papers-published">Published</div></li>-->
-<!--         <li><div class="button working" data-ref="#papers-selected">Working papers</div></li>-->
-
-      </ul>
-
-      <div class="tab-content">
-         <div class="tab-pane active" id="papers-all">
-            <span class="anchor" id="JKOICNN"></span>
-
-            <!--paper 1-->
-            <div class="paper">
-               <p class="title"><b>Large-Scale Demographic Inference of Social Media Users in a Low-Resource Scenario</b></p>
-               <p>Karim Lasri<sup>‡</sup>, <b>Manuel Tonneau<sup>‡</sup></b>, Haaya Naushan, Niyati Malhotra, Ibrahim Farouq, Victor Orozco, Samuel Fraiberger</p>
-               <p><i>ICWSM'23: International AAAI Conference on Web and Social Media.</i></p>
-               <div class="paper-buttons">
-                  <a class="button" href="https://ojs.aaai.org/index.php/ICWSM/article/view/22165" target="_blank">Paper</a>
-               </div>
-            </div>
-
-            <!--paper 2-->
-            <div class="paper">
-               <p class="title"><b>Multilingual Detection of Personal Employment Status on Twitter</b></p>
-               <p><b>Manuel Tonneau</b>, Dhaval Adjodah, Joao Palotti, Nir Grinberg, Samuel Fraiberger</p>
-               <p><i>ACL'22: Annual Meeting of the Association for Computational Linguistics</i></p>
-               <div class="paper-buttons">
-                  <a class="button" href="https://aclanthology.org/2022.acl-long.453/" target="_blank">Paper</a>
-               </div>
-            </div>
-
-         </div>
-      </div>
-   </div>
 
 
 <!--        </div>-->
