--- a/research.html
+++ b/research.html
@@ -1,3 +1,67 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+<!-- Basic Page Needs
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<meta charset="utf-8">
+<title>Manuel Tonneau | Home</title>
+<meta name="description" content="Homepage of Manuel Tonneau">
+<meta name="author" content="Manuel Tonneau">
+
+<!-- Mobile Specific Metas
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!-- FONT
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<link href='https://fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
+
+<!-- CSS
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<link rel="stylesheet" href=/libs/external/skeleton/normalize.css>
+<link rel="stylesheet" href=/libs/external/skeleton/skeleton.css>
+<link rel="stylesheet" href=/libs/custom/my_css.css>
+
+<!-- JQuery
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<script src=/libs/external/jquery-3.1.1.min.js></script>
+
+<!-- Font-Awesome
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<link rel="stylesheet" href=/libs/external/font-awesome-4.7.0/css/font-awesome.min.css>
+
+<!-- Academic-Icons
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<link rel="stylesheet" href=/libs/external/academicons-1.8.6/css/academicons.min.css>
+
+<!-- Skeleton tabs
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<link rel="stylesheet" href=/libs/external/skeleton_tabs/skeleton-tabs.css>
+<script src=/libs/external/skeleton_tabs/skeleton-tabs.js></script>
+
+<!-- Timeline
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<link rel="stylesheet" href=/libs/external/timeline.css>
+
+<!-- Scripts
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<!--<link rel="stylesheet" href=/libs/external/github-prettify-theme.css>-->
+<script src=/libs/custom/my_js.js></script>
+
+<!-- Favicon
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<link rel="icon" type="image/png" href=/libs/icon.png>
+<link rel="shortcut icon" type="image/png" href=/libs/icon.png>
+
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-7YM94T4RDX');
+</script>
+</head>
+<body>
 <!--        </div>-->
 <!--    ========== PUBLICATIONS ==========-->
    <span class="anchor" id="publications"></span>
@@ -43,3 +107,8 @@
          </div>
       </div>
    </div>
+
+<!-- End Document
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+</body>
+</html>
