--- a/research.html
+++ b/research.html
@@ -60,6 +60,17 @@
   gtag('js', new Date());
   gtag('config', 'G-7YM94T4RDX');
 </script>
+
+    <style>
+  /* Center-align content within the container */
+  .content-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+</style>
+
 </head>
 <body>
 <!--        </div>-->
