--- a/research.html
+++ b/research.html
@@ -5,8 +5,8 @@
 <!-- Basic Page Needs
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <meta charset="utf-8">
-<title>Manuel Tonneau | Home</title>
-<meta name="description" content="Homepage of Manuel Tonneau">
+<title>Manuel Tonneau | Research </title>
+<meta name="description" content="Research of Manuel Tonneau">
 <meta name="author" content="Manuel Tonneau">
 
 <!-- Mobile Specific Metas
@@ -61,18 +61,12 @@
   gtag('config', 'G-7YM94T4RDX');
 </script>
 
-    <style>
-  /* Center-align content within the container */
-  .content-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
-</style>
 
 </head>
 <body>
+
+<div class="container">
+
 <!--        </div>-->
 <!--    ========== PUBLICATIONS ==========-->
    <span class="anchor" id="publications"></span>
@@ -118,7 +112,7 @@
          </div>
       </div>
    </div>
-
+</div>
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
