Add upcoming presentation

--- a/index.html
+++ b/index.html
@@ -212,7 +212,17 @@
     display: inline-block; text-align: left;">
     <table style="width: 100%">
 
+      <tr>
+        <td style="width: 10%; min-width: 75px;" class="datev">2023-10-20</td>
+          <td style="width: 90%">
+              🎬 Will present my work on content moderation at the upcoming workshop on “Alternative Platforms/Platform Alternatives: Comparisons and Transnational Flows” at the Weizenbaum Institute in Berlin, Germany!
 
+<!--              <a href="/assets/images/ic2s2_2023.jpg">(photo)</a>-->
+
+
+
+          </td>
+      </tr>
 
 
       <tr>
