--- a/research.html
+++ b/research.html
@@ -5,8 +5,8 @@
 <!-- Basic Page Needs
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <meta charset="utf-8">
-<title>Manuel Tonneau | Research </title>
-<meta name="description" content="Research of Manuel Tonneau">
+<title>Manuel Tonneau | Publications </title>
+<meta name="description" content="Publications of Manuel Tonneau">
 <meta name="author" content="Manuel Tonneau">
 
 <!-- Mobile Specific Metas
@@ -74,7 +74,7 @@
 
       <h4>Research</h4>
 
-         <p>Most recent publications on <a href="https://scholar.google.com/citations?user=RIB-aogAAAAJ&hl=en" target="_blank">Google Scholar</a>.<br/>
+         <p>Most recent list on <a href="https://scholar.google.com/citations?user=RIB-aogAAAAJ&hl=en" target="_blank">Google Scholar</a>.<br/>
           <sup>‡</sup> indicates equal contribution.
           </p>
       <ul class="tab-nav">
