--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
          <ul class="navbar-list">
             <li class="navbar-item"><a class="navbar-link" href=/index.html#bio>Bio</a></li>
              <li class="navbar-item"><a class="navbar-link" href=/index.html#news>News</a></li>
-            <li class="navbar-item"><a class="navbar-link" href=/research.html>Research</a></li>
+            <li class="navbar-item"><a class="navbar-link" href=/research.html>Publications</a></li>
 <!--            <li class="navbar-item"><a class="navbar-link" href=/index.html#talks>Talks</a></li>-->
 <!--            <li class="navbar-item"><a class="navbar-link" href=/index.html#teaching>Teaching</a></li>-->
             <!--<li class="navbar-item"><a class="navbar-link" href=/assets/cv/cv.pdf>CV</a></li>-->
