--- a/research.html
+++ b/research.html
@@ -72,7 +72,7 @@
    <span class="anchor" id="publications"></span>
    <div class="docs-section">
 
-      <h4>Research</h4>
+      <h4>Publications</h4>
 
          <p>Most recent list on <a href="https://scholar.google.com/citations?user=RIB-aogAAAAJ&hl=en" target="_blank">Google Scholar</a>.<br/>
           <sup>‡</sup> indicates equal contribution.
