--- a/index.html
+++ b/index.html
@@ -224,6 +224,14 @@
           </td>
       </tr>
 
+      <tr>
+        <td style="width: 10%; min-width: 75px;" class="datev">2023-03-15</td>
+          <td style="width: 90%">
+              📜 New pre-print on disparities in LLM bias between India and the West. Feedback welcome!
+                              <a href="http://arxiv.org/abs/2309.08573">(link)</a>
+
+          </td>
+      </tr>
 
       <tr>
         <td style="width: 10%; min-width: 75px;" class="datev">2023-07-20</td>
