--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
       <tr>
         <td style="width: 10%; min-width: 75px;" class="datev">2023-10-20</td>
           <td style="width: 90%">
-              🎬 Will present my work on content moderation at the upcoming workshop on “Alternative Platforms/Platform Alternatives: Comparisons and Transnational Flows” at the Weizenbaum Institute in Berlin, Germany
+              💬 Will present my work on content moderation at the upcoming workshop on “Alternative Platforms/Platform Alternatives: Comparisons and Transnational Flows” at the Weizenbaum Institute in Berlin, Germany
 
 <!--              <a href="/assets/images/ic2s2_2023.jpg">(photo)</a>-->
 
@@ -236,7 +236,7 @@
       <tr>
         <td style="width: 10%; min-width: 75px;" class="datev">2023-07-20</td>
           <td style="width: 90%">
-              🎬 Presented ongoing work on hate speech on Nigerian Twitter at IC2S2
+              💬 Presented ongoing work on hate speech on Nigerian Twitter at IC2S2
 
               <a href="/assets/images/ic2s2_2023.jpg">(photo)</a>
 
