--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="nine columns main-description">
             <h1>Manuel Tonneau</h1>
             <p>Ph.D. student in Social Data Science, University of Oxford</p>
-            <p>Data Science Consultant, The World Bank</p>
+            <p>Consultant, DIME AI, The World Bank</p>
             <p>Member of the Open Networks and Big Data Lab, New York University</p>
 
 
