adapt ai persuation

--- a/ai_persuation.html
+++ b/ai_persuation.html
@@ -493,19 +493,18 @@
 <!--   </p>-->
 <!--   </div>-->
 
-   <div class="footer">
-   <div class="row">
-      <div class="nine columns">
-      This website is based on templates developed by <a href='https://web.stanford.edu/~msaveski/' target="_blank" rel="noopener noreferrer">Martin Saveski</a> and <a href='https://manoelhortaribeiro.github.io/' target="_blank" rel="noopener noreferrer">Manoel Horta Ribeiro</a>.
-      </div>
-      <div class="six columns">  &nbsp;&nbsp; </div>
-      <!-- <div class="four columns">
-         firstsurname.secondsurname@microsoft.com
-      </div> -->
-   </div>
-   </div>
+<!--   <div class="footer">-->
+<!--   <div class="row">-->
+<!--      <div class="nine columns">-->
+<!--      This website is based on templates developed by <a href='https://web.stanford.edu/~msaveski/' target="_blank" rel="noopener noreferrer">Martin Saveski</a> and <a href='https://manoelhortaribeiro.github.io/' target="_blank" rel="noopener noreferrer">Manoel Horta Ribeiro</a>.-->
+<!--      </div>-->
+<!--      <div class="six columns">  &nbsp;&nbsp; </div>-->
+<!--      &lt;!&ndash; <div class="four columns">-->
+<!--         firstsurname.secondsurname@microsoft.com-->
+<!--      </div> &ndash;&gt;-->
+<!--   </div>-->
+<!--   </div>-->
 
-</div>
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
