--- a/ai_persuation.html
+++ b/ai_persuation.html
@@ -74,7 +74,7 @@
       <p>
           blablabla
       </p>
-
+   </div>
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 </html>
