--- a/ai_persuation.html
+++ b/ai_persuation.html
@@ -19,35 +19,35 @@
 
 <!-- CSS
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<link rel="stylesheet" href=/libs/external/skeleton/normalize.css>
-<link rel="stylesheet" href=/libs/external/skeleton/skeleton.css>
-<link rel="stylesheet" href=/libs/custom/my_css.css>
+<link rel="stylesheet" href="/libs/external/skeleton/normalize.css">
+<link rel="stylesheet" href="/libs/external/skeleton/skeleton.css">
+<link rel="stylesheet" href="/libs/custom/my_css.css">
 
 <!-- JQuery
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<script src=/libs/external/jquery-3.1.1.min.js></script>
+<script src="/libs/external/jquery-3.1.1.min.js"></script>
 
 <!-- Font-Awesome
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<link rel="stylesheet" href=/libs/external/font-awesome-4.7.0/css/font-awesome.min.css>
+<link rel="stylesheet" href="/libs/external/font-awesome-4.7.0/css/font-awesome.min.css">
 
 <!-- Academic-Icons
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<link rel="stylesheet" href=/libs/external/academicons-1.8.6/css/academicons.min.css>
+<link rel="stylesheet" href="/libs/external/academicons-1.8.6/css/academicons.min.css">
 
 <!-- Skeleton tabs
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<link rel="stylesheet" href=/libs/external/skeleton_tabs/skeleton-tabs.css>
-<script src=/libs/external/skeleton_tabs/skeleton-tabs.js></script>
+<link rel="stylesheet" href="/libs/external/skeleton_tabs/skeleton-tabs.css">
+<script src="/libs/external/skeleton_tabs/skeleton-tabs.js"></script>
 
 <!-- Timeline
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<link rel="stylesheet" href=/libs/external/timeline.css>
+<link rel="stylesheet" href="/libs/external/timeline.css">
 
 <!-- Scripts
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<!--<link rel="stylesheet" href=/libs/external/github-prettify-theme.css>-->
-<script src=/libs/custom/my_js.js></script>
+<!--<link rel="stylesheet" href="/libs/external/github-prettify-theme.css>-->
+<script src="/libs/custom/my_js.js"></script>
 
 <!-- Favicon
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -60,21 +60,29 @@
   gtag('js', new Date());
   gtag('config', 'G-7YM94T4RDX');
 </script>
+
+
+<!-- Custom CSS to Center the Bio Section -->
+<style>
+  .docs-section {
+    text-align: center;
+  }
+</style>
+
 </head>
 <body>
 
+<!-- ========== Bio ========== -->
+<div class="docs-section">
+  <h4>Bio</h4>
+  <p>
+     blabla
+  </p>
 
-   <!-- ========== Bio ========== -->
-   <div class="docs-section">
-      <h4>Bio</h4>
-      <p>
-         blablabla
-      </p>
+  <p>
+    blabla
+  </p>
+</div>
 
-      <p>
-          blablabla
-      </p>
-   </div>
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 </html>
