--- a/ai_persuation.html
+++ b/ai_persuation.html
@@ -74,7 +74,7 @@
 
 <!-- ========== Bio ========== -->
 <div class="docs-section">
-  <h4>Bio</h4>
+  <h4>AI Persuasion project</h4>
   <p>
      blabla
   </p>
