--- a/ai_persuation.html
+++ b/ai_persuation.html
@@ -74,13 +74,9 @@
 
 <!-- ========== Bio ========== -->
 <div class="docs-section">
-  <h4>AI Persuasion project</h4>
+  <h4>Contribution receipts:</h4>
   <p>
-     blabla
-  </p>
-
-  <p>
-    blabla
+     We will list the contribution receipts on this page after all participants have taken the survey.
   </p>
 </div>
 
